--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -6,55 +6,43 @@
   text-align: center;
   height: 100dvh;
   min-height: 500px;
+}
 
-  .hero {
-    max-width: 200px;
-  }
+.hero {
+  max-width: 200px;
+}
 
-  span {
-    display: flex;
-    gap: 25px;
-    justify-content: center;
+span {
+  display: flex;
+  gap: 25px;
+  justify-content: center;
+}
 
-    a {
-      margin: 0;
+a {
+  width: fit-content;
+  align-self: center;
+}
 
-      img {
-        width: 30px;
-        transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
-      }
-      img:hover {
-        transform: scale(1.2);
-      }
-    }
-  }
+button {
+  background-color: var(--btn-color);
+  color: var(--btn-text-color);
+  border: none;
+  border-radius: 20px;
+  width: 126px;
+  height: 50px;
+  font-size: 20px;
+  font-weight: bold;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
+}
 
-  a {
-    width: fit-content;
-    align-self: center;
-  }
+button:hover {
+  transform: scale(1.05);
+}
 
-  button {
-    background-color: var(--btn-color);
-    color: var(--btn-text-color);
-    border: none;
-    border-radius: 20px;
-    width: 126px;
-    height: 50px;
-    font-size: 20px;
-    font-weight: bold;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-    transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
-  }
-
-  button:hover {
-    transform: scale(1.05);
-  }
-
-  button:active {
-    transform: translateY(2px);
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
-  }
+button:active {
+  transform: translateY(2px);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
 }
 
 .colorModeContainer {
@@ -81,7 +69,48 @@
   gap: 20px;
 }
 
-@media (width >= 800px) {
+@media (max-width: 600px) {
+  .colorModeContainer {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+  }
+
+  .colorMode {
+    width: 30px;
+  }
+
+  .info {
+    padding: 0 10px;
+  }
+
+  button {
+    width: 100%;
+  }
+
+  h1 {
+    font-size: 1.5em;
+  }
+
+  h2 {
+    font-size: 1.2em;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 800px) {
+  .container {
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-evenly;
+
+    .hero {
+      max-width: 300px;
+      width: 300px;
+    }
+  }
+}
+
+@media (min-width: 800px) {
   .container {
     flex-direction: row-reverse;
     align-items: center;
@@ -94,7 +123,7 @@
   }
 }
 
-@media (width >= 1400px) {
+@media (min-width: 1400px) {
   .container {
     .hero {
       max-width: 400px;
