--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -9,6 +9,7 @@
 
   .hero {
     max-width: 200px;
+    margin-bottom: 20px; /* Mobilde yukarıdan biraz boşluk ekleyerek resmin aşağıda görünmesini sağlıyoruz */
   }
 
   span {
@@ -59,6 +60,7 @@
 
 .colorModeContainer {
   position: relative;
+  margin-top: 40px; /* Mobilde ikonun görünürlüğünü artırmak için yukarıdan boşluk ekledik */
 }
 
 .colorMode {
