--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -6,7 +6,7 @@
   text-align: center;
   height: 100dvh;
   min-height: 500px;
-  padding: 25px;
+  margin-bottom: 35px;
 
   .hero {
     max-width: 200px;
