--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -7,102 +7,214 @@
   height: 100dvh;
   min-height: 500px;
   margin-bottom: 50px;
+}
 
-  .hero {
-    max-width: 200px;
-    /* margin-bottom: 80px; */
-     /* Mobilde yukarıdan biraz boşluk ekleyerek resmin aşağıda görünmesini sağlıyoruz */
-  }
+.hero {
+  max-width: 200px;
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeIn 1s ease-out forwards;
+}
 
-  span {
-    display: flex;
-    gap: 25px;
-    justify-content: center;
-
-    a {
-      margin: 0;
-
-      img {
-        width: 30px;
-        transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
-      }
-      img:hover {
-        transform: scale(1.2);
-      }
-    }
-  }
-
-  a {
-    width: fit-content;
-    align-self: center;
-  }
-
-  button {
-    background-color: var(--btn-color);
-    color: var(--btn-text-color);
-    border: none;
-    border-radius: 20px;
-    width: 126px;
-    height: 50px;
-    font-size: 20px;
-    font-weight: bold;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-    transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
-  }
-
-  button:hover {
-    transform: scale(1.05);
-  }
-
-  button:active {
-    transform: translateY(2px);
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
+span {
+  display: flex;
+  gap: 25px;
+  justify-content: center;
+}
+
+span a {
+  margin: 0;
+}
+
+span a img {
+  width: 30px;
+  transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out, filter 0.3s ease-in-out;
+}
+
+span a img:hover {
+  transform: scale(1.2);
+  filter: hue-rotate(45deg);
+}
+
+a {
+  width: fit-content;
+  align-self: center;
+}
+
+button {
+  background-color: var(--btn-color);
+  color: var(--btn-text-color);
+  border: none;
+  border-radius: 20px;
+  width: 126px;
+  height: 50px;
+  font-size: 20px;
+  font-weight: bold;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
+  position: relative;
+  overflow: hidden;
+}
+
+button:hover {
+  transform: scale(1.05);
+}
+
+button:active {
+  transform: translateY(2px);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+}
+
+button::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  top: 50%;
+  left: 50%;
+  pointer-events: none;
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  animation: ripple 0.6s ease-out;
+  
+}
+
+button:active::after {
+  transform: translate(-50%, -50%) scale(4);
+  transition: transform 0.3s ease-out;
+}
+
+@keyframes ripple {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(4);
+    opacity: 0;
+  }
+}
+
+h1 {
+  display: inline-block;
+  animation: fadeIn 3s ease-out forwards;
+}
+
+
 .colorModeContainer {
   position: relative;
-  margin-top: 135px; /* Mobilde ikonun görünürlüğünü artırmak için yukarıdan boşluk ekledik */
+  margin-top: 135px;
 }
 
 .colorMode {
   position: absolute;
   right: 0;
-  width: 25px;
+  width: 27px;
+  animation: rotate 2s infinite; 
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg); /* Başlangıç durumu */
+  }
+  50% {
+    transform: rotate(180deg); /* Yarı dönme noktası */
+  }
+  100% {
+    transform: rotate(360deg); /* Tam dönme noktası */
+  }
 }
 
 .colorMode:hover {
   cursor: pointer;
 }
-
 .description {
   max-width: 74ch;
+  padding: 20px;
+  margin-top: 20px;
+  line-height: 1.6;
+  text-align: justify;
+  opacity: 0; 
+  animation: fadeIn 3s ease-out forwards; 
 }
+
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1; 
+    transform: translateY(0); 
+  }
+}
+
+
+h2 {
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap; 
+  animation: typewriter 2s steps(40) 1s 1 normal both;
+  font-size: 2.5rem;
+  border-right: 3px solid; 
+}
+
+
+@keyframes typewriter {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+
+h2 {
+  border-right: none;
+}
+
+
 
 .info {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  animation: slideInTitle 1s ease-out forwards;
 }
 
-@media (width >= 800px) {
+@keyframes slideInTitle {
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@media (min-width: 800px) {
   .container {
     flex-direction: row-reverse;
     align-items: center;
     justify-content: space-evenly;
+  }
 
-    .hero {
-      max-width: 350px;
-      width: 350px;
-    }
+  .hero {
+    max-width: 350px;
+    width: 350px;
   }
 }
 
-@media (width >= 1400px) {
-  .container {
-    .hero {
-      max-width: 400px;
-      width: 400px;
-    }
+@media (min-width: 1400px) {
+  .hero {
+    max-width: 400px;
+    width: 400px;
   }
 }
