--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -223,20 +223,22 @@ h2 {
   }
 
   .colorMode {
-    margin-right: 200px;
+    margin-right: 50px;
     width: 20px;
   }
 
   .description {
     max-width: 100%;
-    padding: 10px;
+    padding: 25px;
     margin-top: 10px;
     font-size: 0.9rem;
     text-align: justify;
   }
-
+  h1{
+    font-size: 1.7rem;
+  }
   h2 {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     border-right: none;
   }
 }
