--- a/src/sections/Scroll/ScrollStyles.module.css
+++ b/src/sections/Scroll/ScrollStyles.module.css
@@ -1,7 +1,7 @@
 .scrollToTopButton {
     position: fixed;
     bottom: 20px;
-    right: 20px;
+    right: 30px;
     background-color: rgb(3, 49, 49);
     border: none;
     border-radius: 50%;
@@ -16,10 +16,17 @@
 }
 
 .scrollToTopButton:hover {
-    background-color: lightgray; /* Üzerine gelince renk değişimi */
+    background-color: lightgray; 
 }
 
 .scrollIcon {
     width: 24px;
     height: 24px;
+}
+@media(max-width:767px) {
+    .scrollToTopButton{
+        right: 10px;
+        width: 40px;
+        height: 40px;
+    }
 }
