--- a/src/sections/Scroll/ScrollStyles.module.css
+++ b/src/sections/Scroll/ScrollStyles.module.css
@@ -25,8 +25,12 @@
 }
 @media(max-width:767px) {
     .scrollToTopButton{
-        right: 10px;
+        right: 15px;
         width: 40px;
         height: 40px;
+    }
+    .scrollIcon {
+        width: 20px;
+        height: 20px;
     }
 }
