--- a/src/sections/Projects/ProjectsStyles.module.css
+++ b/src/sections/Projects/ProjectsStyles.module.css
@@ -4,10 +4,13 @@
   text-align: center;
 
   img {
-    max-width: 250px;
+    width: 250px;
+    height: 200px;
     align-self: center;
     background-color: var(--project-card-bg);
     border-radius: 20px;
+    object-fit: cover;
+    justify-content: center;
   }
 
   a {
