--- a/src/sections/Skills/SkillsStyles.module.css
+++ b/src/sections/Skills/SkillsStyles.module.css
@@ -1,4 +1,3 @@
-/* Önceden var olan stiller */
 .container {
   display: flex;
   flex-direction: column;
@@ -8,68 +7,62 @@
 .skillList {
   display: flex;
   padding: 40px;
-  justify-content: center; /* İkonları ortalamak için */
   align-items: center;
   flex-wrap: wrap;
-  /* İkonlar arasındaki boşluğu ayarlayın */
   max-width: fit-content;
-  margin: 0 auto; /* Ortalamayı desteklemek için */
+  margin: 0 auto;
 }
 
 @media (min-width: 800px) {
   .skillList {
-    display: grid; /* Grid sistemini kullanarak 4 sütunlu düzen */
-    grid-template-columns: repeat(3, 1fr); /* 4 sütunlu grid */
-    gap: 130px; /* Masaüstü için ikonlar arasındaki boşluk */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 130px;
   }
 }
 
-/* SkillList için eklenen stiller */
 .iconWrapper {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 60px; /* İkon boyutu */
-  height: 60px; /* İkon boyutu */
+  width: 60px;
+  height: 60px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  flex-shrink: 0; /* İkonların boyutlarının değişmesini engellemek için */
+  flex-shrink: 0;
 }
 
 .iconWrapper img {
   width: 100%;
-  height: 100%; /* İkonların tam olarak wrapper'ı doldurmasını sağlar */
-  object-fit: contain; /* İkonların orantısını korur */
+  height: 100%;
+  object-fit: contain;
 }
 
 .iconWrapper:hover {
-  transform: scale(1.1); /* Hover sırasında ikonu biraz büyütür */
-  /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3); */
-  /* Hover sırasında gölge ekler */
+  transform: scale(1.1);
 }
-/* Mobil Uyumlu Stiller */
 
-/* Küçük ekranlar için (örneğin, telefonlar) */
 @media (max-width: 600px) {
   .skillList {
-    padding: 15px; /* Mobil cihazlarda biraz daha az padding */
-    gap: 15px; /* İkonlar arasındaki boşluğu azaltın */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 15px;
+    gap: 25px;
   }
 
   .iconWrapper {
-    width: 50px; /* İkon boyutunu mobilde biraz küçültün */
-    height: 50px; /* İkon boyutunu mobilde biraz küçültün */
+    width: 50px;
+    height: 50px;
   }
 }
 
-/* Daha geniş ekranlar için (tabletler ve küçük ekranlı dizüstü bilgisayarlar) */
 @media (min-width: 601px) and (max-width: 799px) {
   .skillList {
-    padding: 20px; /* Tabletler için padding */
-    gap: 20px; /* İkonlar arasındaki boşluğu orta seviyede tutun */
+    padding: 20px;
+    gap: 20px;
   }
 
   .iconWrapper {
-    width: 55px; /* İkon boyutunu tabletlerde biraz küçültün */
-    height: 55px; /* İkon boyutunu tabletlerde biraz küçültün */
+    width: 55px;
+    height: 55px;
   }
 }
